@@ -1,3 +1,8 @@
+2013-02-11: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+	* RSSArticleCreationListener.m
+	* DOMParser.m
+	  use PRIuPTR to print NSUIntegers
+
 2012-06-13 Yavor Doganov  <yavor@gnu.org>
 
 	* GNUmakefile
